RESOLVED FIXED199129
[LFC][IFC] Non-baseline aligned inline container should not mutate the baseline
https://bugs.webkit.org/show_bug.cgi?id=199129
Summary [LFC][IFC] Non-baseline aligned inline container should not mutate the baseline
alan
Reported 2019-06-22 13:51:49 PDT
<span style="vertical-align: top">foobar</span>
Attachments
Patch (8.72 KB, patch)
2019-06-22 13:57 PDT, alan
no flags
Patch (8.87 KB, patch)
2019-06-22 15:21 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-06-22 13:52:13 PDT
alan
Comment 2 2019-06-22 13:57:17 PDT
alan
Comment 3 2019-06-22 15:21:35 PDT
WebKit Commit Bot
Comment 4 2019-06-23 08:14:49 PDT
Comment on attachment 372689 [details] Patch Clearing flags on attachment: 372689 Committed r246719: <https://trac.webkit.org/changeset/246719>
WebKit Commit Bot
Comment 5 2019-06-23 08:14:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.