[LFC][IFC] Non-baseline aligned inline container should not mutate the baseline https://bugs.webkit.org/show_bug.cgi?id=199129 <rdar://problem/52022533>

Reviewed by Antti Koivisto.

Only baseline aligned inline container (<span style="vertical-aligned: baseline">) should adjust line's baseline.
This patch also fixes m_baselineTop's value when we apply the initial strut.

* layout/inlineformatting/InlineLine.cpp:
(WebCore::Layout::isInlineContainerConsideredEmpty):
(WebCore::Layout::Line::isVisuallyEmpty const):
(WebCore::Layout::Line::adjustBaselineAndLineHeight):


Canonical link: https://commits.webkit.org/213104@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246719 268f45cc-cd09-0410-ab3c-d52691b4dbfc